# upipe

./: configure.ac
examples/: .gitignore  Makefile.am  uplay2.c
include/: Makefile.am
include/upipe-gl2/: Makefile.am  upipe_gl2_sink_common.h  upipe_glfw_sink.h  uprobe_gl2_sink.h
lib/: Makefile.am
lib/upipe-gl2/: Makefile.am  libupipe_gl2.pc.in  upipe_glfw_sink.c  uprobe_gl2_sink.c
